HHH-20497 - Introduce phased boot-model construction
HHH-20611 - Disallow quoted @Entity(name)
HHH-20601 - Drop hibernate.mapping.default_list_semantics

Replace the legacy side-effect-heavy bootstrap flow with an explicit, phased
source/categorization/binding/materialization pipeline for ORM 9 boot model
construction.

Major themes:

* introduce explicit boot-model phases for source discovery, XML overlay,
  categorization, binding views, and mapping-object materialization
* move semantic mapping facts into binding/model products before projecting
  them into legacy org.hibernate.mapping structures
* add compatibility handoffs for source members, attribute type correspondence,
  relational name correspondence, state-management metadata, identifiers,
  mapped-superclass contributions, embeddable usages, natural-id, tenant-id,
  collation, version, and aggregate mappings
* recover JPA/bootstrap settings normalization previously handled by the
  removed EntityManagerFactoryBuilderImpl path
* restore parity for schema/exportables, association FK/mappedBy/property-ref,
  IdClass/derived identity, generic inheritance, embeddable contribution,
  aggregate JSON/XML/STRUCT mappings, LIST/BAG classification, cache/state
  metadata, inheritance/discriminator finalization, and custom/basic type
  materialization
* add focused guardrails for the new binding/materialization pipeline and the
  most failure-prone compatibility boundaries
* remove obsolete binding-gap, full-suite census, and rolling-baseline
  artifacts now that the complete suite is green

Notable fixes and decisions:

* use hibernate-models metadata for generic decisions rather than reflection
* make Property expose MemberDetails as the source-member bridge
* add AttributeTypeCorrespondence and RelationalModelCorrespondences to avoid
  fragile positional matching and to preserve logical/physical column facts
* carry recovered settings through ResolvedSessionFactorySettings,
  SessionFactoryOptionsCollector, and S